--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,73 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
-    android:orientation="vertical"
     android:layout_gravity="center"
-    android:layout_marginHorizontal="20dp">
+    android:orientation="vertical"
+    tools:context=".activity.LoginActivity">
 
     <ImageView
-        android:layout_gravity="center"
-        android:layout_marginTop="40dp"
         android:id="@+id/iv_yildiz"
         android:layout_width="100dp"
         android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
         android:background="@drawable/yildiz"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log in"
         android:layout_gravity="center"
-        android:textSize="20dp"
-        />
-
+        android:text="Log in"
+        android:textSize="20dp" />
 
 
     <com.google.android.material.textfield.TextInputLayout
 
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
-        >
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="20dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etEmail"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="email"
-            />
+            android:hint="email" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_marginHorizontal="20dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="password"/>
-
+            android:hint="password" />
 
 
     </com.google.android.material.textfield.TextInputLayout>
+
     <TextView
         android:id="@+id/btnSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New to YILDIZ? Create an account"
+        android:layout_gravity="center"
         android:layout_marginVertical="20dp"
-        android:layout_gravity="center"/>
+        android:text="New to YILDIZ? Create an account" />
+
     <Button
         android:id="@+id/btnPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_gravity="center"
+        android:backgroundTint="@color/yellow"
         android:text="Sign in"
         android:textColor="@color/black"
-        android:backgroundTint="@color/yellow"/>
+        app:layout_constraintBottom_toBottomOf="parent" />
 </LinearLayout>
