--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpActivity"
+    tools:context=".activity.SignUpActivity"
     android:orientation="vertical"
     android:layout_gravity="center"
-    android:layout_marginHorizontal="20dp">
+    >
     <ImageView
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
@@ -28,10 +28,11 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="20dp"
+        android:layout_marginHorizontal="20dp"
         >
 
         <com.google.android.material.textfield.TextInputEditText
@@ -45,10 +46,12 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
         >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etPassword"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="password"/>
@@ -59,11 +62,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="20dp"
         >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etConfirmPassword"
-
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="confirm password"/>
@@ -77,7 +81,7 @@
         android:layout_marginVertical="20dp"
         android:layout_gravity="center"/>
     <Button
-        android:id="@+id/btnSinUp"
+        android:id="@+id/btnSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
