--- a/app/src/main/res/layout/activity_log_into.xml
+++ b/app/src/main/res/layout/activity_log_into.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogIntoActivity"
+    tools:context=".activity.LogIntoActivity"
     android:layout_gravity="center">
 
     <ImageView
