--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:title="Profile"/>
-<item android:title="Contact"/>
-<item android:title="Sign out"/>
+    <item android:title="Profile" android:id="@+id/btnProfile"/>
+    <item android:title="Sign out" android:id="@+id/btnSignOut"/>
 </menu>
